Sidebar and scrollbar problems are solved!

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,29 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-.sidebar {
-  -webkit-animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-}
-
-@-webkit-keyframes slide-top {
-  0% {
-    -webkit-transform: translateY(100px);
-    transform: translateY(100px);
-  }
-  100% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-  }
-}
-
-@keyframes slide-top {
-  0% {
-    -webkit-transform: translateY(100px);
-    transform: translateY(100px);
-  }
-  100% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
+@layer base {
+  :root {
+    --sidebar-open-width: 325px;
+    --nav-width: 325px;
+    --logo-area-open-width: 285px;
+    --logo-area-close-width: 124px;
+    --footer-height: 112px;
   }
 }
